--- a/style.css
+++ b/style.css
@@ -15,17 +15,19 @@ body{
     width: 40vw;
     border-radius: 25px;
     margin: auto;
+    margin-top: 20px;
     box-shadow: 4px 4px 4px rgb(0, 0, 0),
                 -4px -4px 4px #000;
     background-color: #091921;
     background: url(3.jpg);
 }
 input{
-    color: white;
+    color:black;
     font-weight: 800;
+    border-radius: 10px;
 
     border: none;
-    background-color: #000;
+    background-color:white;
     font-size: 30px;
     height: 45px;
     text-align: center;
@@ -38,10 +40,10 @@ button{
     background-color: #000;
     color: #fff;
     font-weight: 850;
-    border: 2px solid white;
-    box-shadow: 4px 4px 4px #fff,
-                -4px -4px 8px #fff;
-    font-size: 35px;
+    border: 2px solid red;
+    box-shadow: 4px 4px 4px red,
+                -4px -4px 8px red;
+    font-size: 30px;
     height: 45px;
 }
 .result{
@@ -54,6 +56,7 @@ button{
     width: 450px;
     border-radius: 15px;
     background-color: #091921;
+    background: url(3.jpg);
 }
 
 
@@ -62,11 +65,12 @@ button{
     color: white;
     font-weight: 850;
     margin: auto;
-    height: 120px;
-    margin-top: 20px;
+    height: 110px;
+    margin-top: -100px;
     margin-right: 20px;
     margin-bottom: 20px;
-    width: 350px;
+    width: 300px;
     border-radius: 15px;
     background-color: #091921;
+    background: url(3.jpg);
 }
