--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     background-position: center;
 }
 .card{
-    height: 65vh;
+    height: 63vh;
     width: 40vw;
     border-radius: 25px;
     margin: auto;
@@ -45,15 +45,16 @@ button{
                 -4px -4px 8px red;
     font-size: 30px;
     height: 45px;
+    border-radius: 15px;
 }
 .result{
     font-size: 25px;
     color: white;
     font-weight: 850;
     margin: auto;
-    height: 225px;
+    height: 180px;
     margin-top: 35px;
-    width: 450px;
+    width: 400px;
     border-radius: 15px;
     background-color: #091921;
     background: url(3.jpg);
